--- a/euanjones/pegochallenge/2 - The Code Challenge/src/Inventory/Inventory.csproj
+++ b/euanjones/pegochallenge/2 - The Code Challenge/src/Inventory/Inventory.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<Protobuf Include="Protos\Inventory.proto" GrpcServices="Server" />
+	<Protobuf Include="Protos\Inventory.proto" GrpcServices="Both" />
   </ItemGroup>
 
 </Project>
