--- a/euanjones/pegochallenge/2 - The Code Challenge/src/Inventory/appsettings.json
+++ b/euanjones/pegochallenge/2 - The Code Challenge/src/Inventory/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cache": {
+    "SizeLimit": 2048,
+    "ExpirationTime": "00:05:00"
+  }
 }
